--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TClient</string>
+    <string name="vol_left">左声道</string>
+    <string name="vol_right">右声道</string>
+    <string name="vol_double">双声道</string>
 </resources>
